# eudaq

gui/: README.md
gui/src/: euRun.cc
main/exe/src/: euCliReader.cxx
monitors/onlinemon/: CMakeLists.txt
monitors/onlinemon/include/: OnlineMon.hh
monitors/onlinemon/src/: OnlineMon.cxx
user/: CMakeLists.txt
user/ATLASPix/: CMakeLists.txt
user/ATLASPix/module/: CMakeLists.txt
user/ATLASPix/module/src/: ATLASPixMonitor.cc  ATLASPixRawEvent2StdEventConverter.cc
user/MuPix8/module/src/: MuPix8RawEvent2StdEventConverter.cc
user/SpeedTest/: CMakeLists.txt
user/SpeedTest/misc/: Ex0.conf  Ex0.ini  example_startrun.sh
user/SpeedTest/module/: CMakeLists.txt
user/SpeedTest/module/src/: SpeedTestProducer.cc
user/eudet/exe/src/: euCliTeleReader.cxx
user/eudet/misc/: telescope.ini
user/eudet/module/src/: NiRawEvent2StdEventConverter.cc
user/example/misc/scan/: ExampleScan.conf  example_startrun.sh
user/tlu/: CMakeLists.txt
user/tlu/exe/: CMakeLists.txt
user/tlu/exe/src/: AidaClInterface.cxx  AidaTluControl.cxx
user/tlu/module/src/: AidaTluProducer.cc
